# tailored-app

./: .gitignore
backend/: .gitignore  Cargo.toml  diesel.toml
backend/migrations/2025-12-31-213206-0000_create_definitions/: down.sql  up.sql
backend/src/: db.rs  defs.rs  handlers.rs  main.rs  schema.rs
backend/src/defs/: definition_repository.rs  definitions.rs
frontend/: package-lock.json  package.json
frontend/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: lib.rs
frontend/src/app/: page.tsx
